# math_or

./: .gitignore  CMakeLists.txt  README.md
include/: IpHelper.h  IpSolver.h  IpSolverApi.h  IpSolverMem.h  IpStructs.h
src/: CMakeLists.txt
src/common/: CMakeLists.txt  IpSolver.cpp  IpSolverMem.cpp  IpStructs.cpp
src/play/: CMakeLists.txt  or_demo.cpp
src/test/: CMakeLists.txt  test_basic.cpp  test_mem.cpp
